syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Dotnist.Grpc";

package dotnist;

// The Dotnist service definition for hash lookups
service DotnistService {
  // Check one or more hashes and return file information for found hashes
  rpc CheckHashes (HashCheckRequest) returns (HashCheckResponse);
  
  // Version endpoint
  rpc Version (VersionRequest) returns (VersionResponse);
}

// Request for hash lookup (single or multiple hashes)
message HashCheckRequest {
  repeated string sha256_hashes = 1;
}

// Response for hash lookup with file information for found hashes
message HashCheckResponse {
  repeated NistFileInfo found_files = 1;
  string error_message = 2;
}

// Detailed file information from minimal database schema
message NistFileInfo {
  string sha256 = 1;
  int64 package_id = 2;
  string package_name = 3;
  string application_type = 4;
  string os_name = 5;
  string manufacturer_name = 6;
}

// Health check request
message VersionRequest {
}

// Health check response
message VersionResponse {
  VersionInfo version_info = 1;
}

message VersionInfo {
  string version = 1;
  string build_set = 2;
  google.protobuf.Timestamp build_date = 3;
  google.protobuf.Timestamp release_date = 4;
  string description = 5;
}